Changes for 1.2.7
* Moore AI logic fix, will now attack alone transports correctly, and some small tweaks (veqryn & wisconsin)

* Moore AI logic fixes, including amphibious attacks, and clearing of data in loops (squidbait)

* Small balancing change to minimap.  Russians -6 PUs, Italians +9 PUs. (veqryn)

* MoveValidator fix, was returning true if route contained subs/trans in part of route, and surface warships in another part of route. (squidbait)

* logic bug fix for easy ai: it was checking for the att value for def units in territories to walk into. (veqryn)

* logic bug fix for the weak/easy ai, so that it will not try to move zero movement units. (daral)

* logic bug fix for the moore ai, which tries to move units out of range. (wisconsin)

* Adding a browser launcher utility that works with java 5 and 6. (Veqryn)

* Adding buttons to the map download dialog, as well as the lobby menu, that when clicked open a web browser to the 
  triplea sourceforge web page for threads on how to download maps, how to host games, and how to report bugs. (veqryn & bung)

* Allowing any country name which begins in "AI" to be automatically set to be AI (in addition to "Neutral"). (veqryn)

* Added a few new properties to start to support next gen engine (ComradeKev)

Changes for 1.2.6

* limit status message length and remove combining characters (sgb)
 
* better server side INode validation (sgb)

* fix null pointer when selecting various air transport loads (ComradeKev)

* Added Great War reliefs (Pulicat)

* Updated BigWorld game (Veqryn, Uboat, Pulicat, and others)

* fix part of bug 3012752 - unitSupportCount not working (ComradeKev)

* fix bug 3081799 air units capable of landing on land included in carrier landing calculations (ComradeKev)

* add SELECTABLE_ZERO_MOVEMENT_UNITS property support (Veqryn)

* fix bug 3043828 pending sea battles with transports causes crash (ComradeKev)
